fix spacing on checkbox groups

--- a/client/app/styles/_commons.scss
+++ b/client/app/styles/_commons.scss
@@ -975,7 +975,7 @@ fieldset {
 
 .cf-form-checkboxes {
   margin-top: rem(20px);
-  margin-bottom: rem(40px);
+  margin-bottom: rem(10px);
 
   .usa-grid-full {
     margin-bottom: 0;
